project_manifests/communicator-master-daemonset.yaml

apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: communicator-writer
  labels:
    app: communicator-writer
spec:
  selector:
    matchLabels:
      name: communicator-writer
  template:
    metadata:
      labels:
        name: communicator-writer
    spec:
      containers:
        - name: communicator-writer
          image: alexeytsarev/redis_communicator
