project_manifests/communicator-slave-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: communicator-reader
  labels:
    app: communicator-reader
spec:
  selector:
    matchLabels:
      name: communicator-reader
  replicas: 1
  template:
    metadata:
      labels:
        name: communicator-reader
    spec:
      containers:
        - name: communicator-reader
          image: alexeytsarev/redis_communicator
