project_manifests/kibana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
spec:
  selector:
    matchLabels:
      app: kibana
      tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: kibana
        tier: frontend
    spec:
      containers:
        - name: kibana
          image: docker.elastic.co/kibana/kibana:7.1.1
          ports:
            - containerPort: 6379
