project_manifests/redis-slave-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-slave
spec:
  selector:
    matchLabels:
      app: redis
      role: slave
      tier: backend
  replicas: 2
  template:
    metadata:
      labels:
        app: redis
        role: slave
        tier: backend
    spec:
      containers:
        - name: redis-slave
          image: redis
          command: ["redis-server", "--slaveof", "redis-master", "6379"]
          ports:
            - containerPort: 6379
