project_manifests/web-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server
spec:
  selector:
    matchLabels:
      app: web-server
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: web-server
        tier: backend
    spec:
      containers:
        - name: web-server
          image: quay.io/myafk/interactive:stable
          command: ["interactive", "ingress"]
          ports:
            - containerPort: 8085
