project_manifests/apache-php-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-php
  labels:
    app: apache-php
    tier: backend
spec:
  selector:
    app: apache-php
    tier: backend
  ports:
    - port: 8073
      targetPort: 8073
