project_manifests/elasticsearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
    tier: backend
spec:
  selector:
    app: elasticsearch
    tier: backend
  ports:
    - port: 9200
      targetPort: 9200
