project_manifests/kibana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  labels:
    app: kibana
    tier: frontend
spec:
  selector:
    app: kibana
    tier: frontend
  ports:
    - port: 5601
      targetPort: 5601
