project_manifests/redis-master-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-master
  labels:
    app: redis
    role: master
    tier: backend
spec:
  selector:
    app: redis
    role: master
    tier: backend
  type: NodePort
  ports:
    - port: 6379
      targetPort: 6379
      nodePort: 30379 # for local debug purpose
