project_manifests/redis-slave-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-slave
  labels:
    app: redis
    role: slave
    tier: backend
spec:
  selector:
    app: redis
    role: slave
    tier: backend
  type: NodePort
  ports:
    - port: 6379
      targetPort: 6379
      nodePort: 31379 # debug purpose
