project_manifests/redis-slave.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-slave
spec:
  selector:
    matchLabels:
      app: redis
      role: slave
      tier: backend
  replicas: 2
  template:
    metadata:
      labels:
        app: redis
        role: slave
        tier: backend
    spec:
      containers:
        - name: redis-slave
          image: redis
          command: ["redis-server", "--slaveof", "redis-master", "6379"]
          ports:
            - containerPort: 6379
---

apiVersion: v1
kind: Service
metadata:
  name: redis-slave
  labels:
    app: redis
    role: slave
    tier: backend
spec:
  selector:
    app: redis
    role: slave
    tier: backend
  type: NodePort
  ports:
    - port: 6379
      targetPort: 6379
      nodePort: 31379 # for local debug purpose
