project_manifests/web-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server
  labels:
    app: web-server
    tier: backend
spec:
  selector:
    app: web-server
    tier: backend
  ports:
    - port: 8085
      targetPort: 8085
