project_manifests/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kibana
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: $1
spec:
  rules:
    - http:
        paths:
          - path: /kibana(.*)
            backend:
              serviceName: kibana
              servicePort: 5601

# Without "SERVER_BASEPATH" can be implemented via:
# https://github.com/elastic/kibana/issues/5230
#apiVersion: networking.k8s.io/v1beta1
#kind: Ingress
#metadata:
#  name: kibana-root
#  annotations:
#    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/rewrite-target: /app/kibana$1
#spec:
#  rules:
#    - http:
#        paths:
#          - path: /kibana(.*)
#            backend:
#              serviceName: kibana
#              servicePort: 5601
#---
#
#apiVersion: networking.k8s.io/v1beta1
#kind: Ingress
#metadata:
#  name: kibana-related
#  annotations:
#    kubernetes.io/ingress.class: nginx
#spec:
#  rules:
#    - http:
#        paths:
#          - path: /bundles|/built_assets|/node_modules|/ui|/api|/translations|/plugins
#            backend:
#              serviceName: kibana
#              servicePort: 5601
