project_manifests/kibana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
spec:
  selector:
    matchLabels:
      app: kibana
      tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: kibana
        tier: frontend
    spec:
      containers:
        - name: kibana
          image: docker.elastic.co/kibana/kibana:7.1.1
          ports:
            - containerPort: 6379
---

apiVersion: v1
kind: Service
metadata:
  name: kibana
  labels:
    app: kibana
    tier: frontend
spec:
  selector:
    app: kibana
    tier: frontend
  ports:
    - port: 5601
      targetPort: 5601
---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kibana
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: $1
spec:
  rules:
    - http:
        paths:
          - path: /kibana(.*)
            backend:
              serviceName: kibana
              servicePort: 5601

# Without "SERVER_BASEPATH" can be implemented via:
# https://github.com/elastic/kibana/issues/5230
#apiVersion: networking.k8s.io/v1beta1
#kind: Ingress
#metadata:
#  name: kibana-root
#  annotations:
#    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/rewrite-target: /app/kibana$1
#spec:
#  rules:
#    - http:
#        paths:
#          - path: /kibana(.*)
#            backend:
#              serviceName: kibana
#              servicePort: 5601
#---
#
#apiVersion: networking.k8s.io/v1beta1
#kind: Ingress
#metadata:
#  name: kibana-related
#  annotations:
#    kubernetes.io/ingress.class: nginx
#spec:
#  rules:
#    - http:
#        paths:
#          - path: /bundles|/built_assets|/node_modules|/ui|/api|/translations|/plugins
#            backend:
#              serviceName: kibana
#              servicePort: 5601
