project_manifests/web-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server
spec:
  selector:
    matchLabels:
      app: web-server
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: web-server
        tier: backend
    spec:
      containers:
        - name: web-server
          image: quay.io/myafk/interactive:stable
          command: ["interactive", "ingress"]
          ports:
            - containerPort: 8085
---

apiVersion: v1
kind: Service
metadata:
  name: web-server
  labels:
    app: web-server
    tier: backend
spec:
  selector:
    app: web-server
    tier: backend
  ports:
    - port: 8085
      targetPort: 8085
---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-server
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /web(/|$)(.*)
            backend:
              serviceName: web-server
              servicePort: 8085
